# FunctionsCalling_GiulianaTecchio

./: .gitignore  README.md  chainlit.md  main.py  pyproject.toml  tools.py
.chainlit/: config.toml
public/: app.css  theme.json
tools/: __init__.py  tools.py
