[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Giancarlo Valente",email = "giancarlo@aulab.it"}
]
readme = "README.md"
requires-python = "<4.0.0,>=3.9"
dependencies = [
    "chainlit (>=2.0.603,<3.0.0)",
    "openai (>=1.60.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
